update shelveWrite demo

--- a/ShelveWrite_Demo.ipynb
+++ b/ShelveWrite_Demo.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from HelperClass import InvertedIndex, Posting, Token"
+    "from HelperClass import InvertedIndex, Posting, Token, ShelveDB"
    ]
   },
   {
@@ -158,76 +158,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "invIndex = InvertedIndex()\n",
-    "invIndex.addToken(fishTok)\n",
-    "invIndex.addToken(nTok)\n",
-    "invIndex.write()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import shelve\n",
-    "filePath = 'Shelve' #Create this folder\n",
-    "def readShelve(filePath:str, token:str):\n",
-    "    with shelve.open(f'{filePath}/DocId', 'c') as shelf:\n",
-    "        print(shelf[token])\n",
-    "\n",
-    "    with shelve.open(f'{filePath}/Freq', 'c') as shelf:\n",
-    "        print(shelf[token])\n",
-    "\n",
-    "    with shelve.open(f'{filePath}/Pos', 'c') as shelf:\n",
-    "        print(shelf[token])\n",
-    "\n",
-    "    with shelve.open(f'{filePath}/Fields', 'c') as shelf:\n",
-    "        print(shelf[token])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1,2\n",
-      "1:2;2:3;\n",
-      "1:1,2;2:10,3,7;\n",
-      "1-title:1,2,normal:3,bold:4;2-title:9,5,bold:4;\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Total Tokens: 2\n",
+       "Token: fish, Total Freq: 5\n",
+       "\tDocId: 1, Freq: 2\n",
+       "\t\tPositions: {1, 2}\n",
+       "\t\tFields:\n",
+       "\t\t\ttitle:{1, 2}\n",
+       "\t\t\tnormal:{3}\n",
+       "\t\t\tbold:{4}\n",
+       "\tDocId: 2, Freq: 3\n",
+       "\t\tPositions: {10, 3, 7}\n",
+       "\t\tFields:\n",
+       "\t\t\ttitle:{9, 5}\n",
+       "\t\t\tbold:{4}\n",
+       "\n",
+       "Token: notFish, Total Freq: 3\n",
+       "\tDocId: 2, Freq: 3\n",
+       "\t\tPositions: {10, 3, 7}\n",
+       "\t\tFields:\n",
+       "\t\t\ttitle:{9, 5}\n",
+       "\t\t\tbold:{4}\n"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "readShelve(filePath, 'fish')"
+    "invIndex = InvertedIndex()\n",
+    "invIndex.addToken(fishTok)\n",
+    "invIndex.addToken(nTok)\n",
+    "invIndex.write()\n",
+    "invIndex"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "1:1;\n",
-      "1:16;\n",
-      "1-normal:16;\n"
+      "fish\n",
+      "1,2,1,2,1,2\n",
+      "1:2;2:3;1:2;2:3;1:2;2:3;\n",
+      "1:1,2;2:10,3,7;1:1,2;2:10,3,7;1:1,2;2:10,3,7;\n",
+      "1-title:1,2,normal:3,bold:4;2-title:9,5,bold:4;1-title:1,2,normal:3,bold:4;2-title:9,5,bold:4;1-title:1,2,normal:3,bold:4;2-title:9,5,bold:4;\n"
      ]
     }
    ],
    "source": [
-    "readShelve('DevShelve', 'fall')"
+    "shelveDB = ShelveDB('Shelve')\n",
+    "shelveDB.readToken('fish')"
    ]
   }
  ],
