--- a/ShelveWrite_Demo.ipynb
+++ b/ShelveWrite_Demo.ipynb
@@ -19,10 +19,7 @@
       "text/plain": [
        "\tDocId: 1, Freq: 2\n",
        "\t\tPositions: {1, 2}\n",
-       "\t\tFields:\n",
-       "\t\t\ttitle:{1, 2}\n",
-       "\t\t\tnormal:{3}\n",
-       "\t\t\tbold:{4}"
+       "\t\tFields:None"
       ]
      },
      "execution_count": 2,
@@ -34,20 +31,13 @@
     "fishP = Posting(1)\n",
     "fishP.addPosition(1)\n",
     "fishP.addPosition(2)\n",
-    "fishP.addWeight('title', 1)\n",
-    "fishP.addWeight('title', 2)\n",
-    "fishP.addWeight('normal', 3)\n",
-    "fishP.addWeight('bold', 4)\n",
     "\n",
     "fishP2 = Posting(2)\n",
     "fishP2.addPosition(3)\n",
     "fishP2.addPosition(7)\n",
     "fishP2.addPosition(10)\n",
-    "fishP2.addWeight('title', 5)\n",
-    "fishP2.addWeight('title', 9)\n",
-    "fishP2.addWeight('bold', 4)\n",
     "\n",
-    "fishP\n"
+    "fishP"
    ]
   },
   {
@@ -131,7 +121,7 @@
     {
      "data": {
       "text/plain": [
-       "'1-title:1,2,normal:3,bold:4;'"
+       "'1-;'"
       ]
      },
      "execution_count": 6,
@@ -158,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -168,25 +158,21 @@
        "Token: fish, Total Freq: 5\n",
        "\tDocId: 1, Freq: 2\n",
        "\t\tPositions: {1, 2}\n",
-       "\t\tFields:\n",
-       "\t\t\ttitle:{1, 2}\n",
-       "\t\t\tnormal:{3}\n",
-       "\t\t\tbold:{4}\n",
+       "\t\tFields:None\n",
+       "\n",
        "\tDocId: 2, Freq: 3\n",
        "\t\tPositions: {10, 3, 7}\n",
-       "\t\tFields:\n",
-       "\t\t\ttitle:{9, 5}\n",
-       "\t\t\tbold:{4}\n",
+       "\t\tFields:None\n",
+       "\n",
        "\n",
        "Token: notFish, Total Freq: 3\n",
        "\tDocId: 2, Freq: 3\n",
        "\t\tPositions: {10, 3, 7}\n",
-       "\t\tFields:\n",
-       "\t\t\ttitle:{9, 5}\n",
-       "\t\t\tbold:{4}\n"
+       "\t\tFields:None\n",
+       "\n"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,30 +181,56 @@
     "invIndex = InvertedIndex()\n",
     "invIndex.addToken(fishTok)\n",
     "invIndex.addToken(nTok)\n",
-    "invIndex.write()\n",
+    "# invIndex.write()\n",
     "invIndex"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fish\n",
-      "1,2,1,2,1,2\n",
-      "1:2;2:3;1:2;2:3;1:2;2:3;\n",
-      "1:1,2;2:10,3,7;1:1,2;2:10,3,7;1:1,2;2:10,3,7;\n",
-      "1-title:1,2,normal:3,bold:4;2-title:9,5,bold:4;1-title:1,2,normal:3,bold:4;2-title:9,5,bold:4;1-title:1,2,normal:3,bold:4;2-title:9,5,bold:4;\n"
+      "\n",
+      "\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "shelveDB = ShelveDB('Shelve')\n",
     "shelveDB.readToken('fish')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Token: fish, Total Freq: 5\n",
+       "\tDocId: 1, Freq: 2\n",
+       "\t\tPositions: {1, 2}\n",
+       "\t\tFields:None\n",
+       "\n",
+       "\tDocId: 2, Freq: 3\n",
+       "\t\tPositions: {10, 3, 7}\n",
+       "\t\tFields:None\n"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "invIndex['fish']"
    ]
   }
  ],
