add setters and getters to Token class

--- a/ShelveWrite_Demo.ipynb
+++ b/ShelveWrite_Demo.ipynb
@@ -44,99 +44,6 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1:dict(weights);2:dict(weights);'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'key = Term'\n",
-    "'Value Below F#0 (DocId)'\n",
-    "'1,2,3,4,5'\n",
-    "\n",
-    "'Value Below F#1 (Freq)'\n",
-    "'DocId:Freq-Positions'\n",
-    "'1:2;2:2;'\n",
-    "\n",
-    "'Value Below F#2 (Positions)'\n",
-    "'DocId:Freq-Positions'\n",
-    "'1:1,2;2:1,2,3;'\n",
-    "\n",
-    "'Value Below F#3 (Weights)'\n",
-    "'1:dict(weights);2:dict(weights);'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1:2;'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fishP.getFreqStr()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1:1,2;'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fishP.getPosStr()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1-;'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fishP.getFieldStr()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [],
    "source": [
     "fishTok = Token('fish')\n",
@@ -148,31 +55,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Total Tokens: 2\n",
-       "Token: fish, Total Freq: 5\n",
-       "\tDocId: 1, Freq: 2\n",
+       "Token: fish\n",
+       "DocId: 1, Pos: \tDocId: 1, Freq: 2\n",
        "\t\tPositions: {1, 2}\n",
        "\t\tFields:None\n",
        "\n",
-       "\tDocId: 2, Freq: 3\n",
+       "DocId: 2, Pos: \tDocId: 2, Freq: 3\n",
        "\t\tPositions: {10, 3, 7}\n",
        "\t\tFields:None\n",
        "\n",
        "\n",
-       "Token: notFish, Total Freq: 3\n",
-       "\tDocId: 2, Freq: 3\n",
+       "Token: notFish\n",
+       "DocId: 2, Pos: \tDocId: 2, Freq: 3\n",
        "\t\tPositions: {10, 3, 7}\n",
        "\t\tFields:None\n",
        "\n"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,50 +94,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "\n",
-      "\n"
+      "{'title': {2, 3}, 'normal': {4}}\n"
      ]
     }
    ],
    "source": [
-    "shelveDB = ShelveDB('Shelve')\n",
-    "shelveDB.readToken('fish')"
+    "from collections import defaultdict\n",
+    "\n",
+    "_weights = defaultdict(lambda: dict)\n",
+    "\n",
+    "def addWeight(docId, field, pos):\n",
+    "    if docId in _weights:\n",
+    "        if field in _weights[docId]:\n",
+    "            _weights[docId][field].add(pos)\n",
+    "        else:\n",
+    "            _weights[docId][field] = {pos}\n",
+    "    else:\n",
+    "        _weights[docId] = {field:{pos}}\n",
+    "\n",
+    "\n",
+    "addWeight(1,'title', 2)\n",
+    "addWeight(1,'title', 3)\n",
+    "addWeight(1,'normal', 4)\n",
+    "addWeight(2,'normal', 5)\n",
+    "addWeight(2,'title', 1)\n",
+    "\n",
+    "\n",
+    "print(dict(_weights[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shelve\n",
+    "def writeTerm(tokenObj:Token):\n",
+    "    term = tokenObj.getToken()\n",
+    "    with shelve.open(f'Shelve/Terms', 'c') as shelf:\n",
+    "        shelf[term] = tokenObj.getAllPostings()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: {1, 2}, 2: {3, 7, 10}}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "invIndex['fish'].getAllPositions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "invIndex['fish'].getAllDocId()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# writeTerm(invIndex['fish'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def readTerm(term:str):\n",
+    "    with shelve.open(f'Shelve/Terms', 'c') as shelf:\n",
+    "        if term in shelf:\n",
+    "            return shelf[term]\n",
+    "        else:\n",
+    "            return 'N/A'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Token: fish, Total Freq: 5\n",
-       "\tDocId: 1, Freq: 2\n",
-       "\t\tPositions: {1, 2}\n",
-       "\t\tFields:None\n",
-       "\n",
-       "\tDocId: 2, Freq: 3\n",
-       "\t\tPositions: {10, 3, 7}\n",
-       "\t\tFields:None\n"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "invIndex['fish']"
+    "# readTerm('fish')"
    ]
   }
  ],
