--- a/TokenizerWeight_Demo.ipynb
+++ b/TokenizerWeight_Demo.ipynb
@@ -6,14 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import sys  \n",
-    "# sys.path.insert(0, './Tokenizer.py')\n",
-    "# from Tokenizer import Tokenizer\n",
-    "\n",
-    "# parsedInput = Tokenizer('Test.json')\n",
-    "# parsedInput.printFreq()\n",
-    "\n",
-    "from HelperClass import HTMLTokenizer, InvertedIndex\n",
+    "from HelperClass import InvertedIndex, Token\n",
     "from helper import cleanHtml, tokenizeHtml"
    ]
   },
@@ -86,7 +79,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "invIndex = InvertedIndex() #Create inverted index to hold tokens from parser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -94,152 +96,117 @@
      "output_type": "stream",
      "text": [
       "Total Tokens: 13\n",
-      "Token: my, Total Freq: 4\n",
+      "Token: my\n",
       "\tDocId: 1, Freq: 2\n",
-      "\t\tPositions: {1, 5}\n",
-      "\t\tFields:\n",
-      "\t\t\ttitle:{1}\n",
-      "\t\t\th2:{5}\n",
+      "\t\tPos: {1, 5}\n",
+      "\t\tWeights: {'title': {1}, 'h2': {5}}\n",
       "\tDocId: 2, Freq: 2\n",
-      "\t\tPositions: {1, 5}\n",
-      "\t\tFields:\n",
-      "\t\t\ttitle:{1}\n",
-      "\t\t\th2:{5}\n",
+      "\t\tPos: {1, 5}\n",
+      "\t\tWeights: {'title': {1}, 'h2': {5}}\n",
       "\n",
-      "Token: page, Total Freq: 4\n",
+      "Token: page\n",
       "\tDocId: 1, Freq: 2\n",
-      "\t\tPositions: {2, 6}\n",
-      "\t\tFields:\n",
-      "\t\t\ttitle:{2}\n",
-      "\t\t\th2:{6}\n",
-      "\t\t\ta:{6}\n",
+      "\t\tPos: {2, 6}\n",
+      "\t\tWeights: {'title': {2}, 'h2': {6}, 'a': {6}}\n",
       "\tDocId: 2, Freq: 2\n",
-      "\t\tPositions: {2, 6}\n",
-      "\t\tFields:\n",
-      "\t\t\ttitle:{2}\n",
-      "\t\t\th2:{6}\n",
-      "\t\t\ta:{6}\n",
+      "\t\tPos: {2, 6}\n",
+      "\t\tWeights: {'title': {2}, 'h2': {6}, 'a': {6}}\n",
       "\n",
-      "Token: welcom, Total Freq: 2\n",
+      "Token: welcom\n",
       "\tDocId: 1, Freq: 1\n",
-      "\t\tPositions: {3}\n",
-      "\t\tFields:\n",
-      "\t\t\th2:{3}\n",
+      "\t\tPos: {3}\n",
+      "\t\tWeights: {'h2': {3}}\n",
       "\tDocId: 2, Freq: 1\n",
-      "\t\tPositions: {3}\n",
-      "\t\tFields:\n",
-      "\t\t\th2:{3}\n",
+      "\t\tPos: {3}\n",
+      "\t\tWeights: {'h2': {3}}\n",
       "\n",
-      "Token: to, Total Freq: 2\n",
+      "Token: to\n",
       "\tDocId: 1, Freq: 1\n",
-      "\t\tPositions: {4}\n",
-      "\t\tFields:\n",
-      "\t\t\th2:{4}\n",
+      "\t\tPos: {4}\n",
+      "\t\tWeights: {'h2': {4}}\n",
       "\tDocId: 2, Freq: 1\n",
-      "\t\tPositions: {4}\n",
-      "\t\tFields:\n",
-      "\t\t\th2:{4}\n",
+      "\t\tPos: {4}\n",
+      "\t\tWeights: {'h2': {4}}\n",
       "\n",
-      "Token: thi, Total Freq: 2\n",
+      "Token: thi\n",
       "\tDocId: 1, Freq: 1\n",
-      "\t\tPositions: {7}\n",
-      "\t\tFields:\n",
-      "\t\t\tnormal:{7}\n",
+      "\t\tPos: {7}\n",
+      "\t\tWeights: {'normal': {7}}\n",
       "\tDocId: 2, Freq: 1\n",
-      "\t\tPositions: {7}\n",
-      "\t\tFields:\n",
-      "\t\t\tnormal:{7}\n",
+      "\t\tPos: {7}\n",
+      "\t\tWeights: {'normal': {7}}\n",
       "\n",
-      "Token: is, Total Freq: 2\n",
+      "Token: is\n",
       "\tDocId: 1, Freq: 1\n",
-      "\t\tPositions: {8}\n",
-      "\t\tFields:\n",
-      "\t\t\tnormal:{8}\n",
+      "\t\tPos: {8}\n",
+      "\t\tWeights: {'normal': {8}}\n",
       "\tDocId: 2, Freq: 1\n",
-      "\t\tPositions: {8}\n",
-      "\t\tFields:\n",
-      "\t\t\tnormal:{8}\n",
+      "\t\tPos: {8}\n",
+      "\t\tWeights: {'normal': {8}}\n",
       "\n",
-      "Token: the, Total Freq: 4\n",
+      "Token: the\n",
       "\tDocId: 1, Freq: 2\n",
-      "\t\tPositions: {9, 15}\n",
-      "\t\tFields:\n",
-      "\t\t\tnormal:{9, 15}\n",
+      "\t\tPos: {9, 15}\n",
+      "\t\tWeights: {'normal': {9, 15}}\n",
       "\tDocId: 2, Freq: 2\n",
-      "\t\tPositions: {9, 15}\n",
-      "\t\tFields:\n",
-      "\t\t\tnormal:{9, 15}\n",
+      "\t\tPos: {9, 15}\n",
+      "\t\tWeights: {'normal': {9, 15}}\n",
       "\n",
-      "Token: first, Total Freq: 2\n",
+      "Token: first\n",
       "\tDocId: 1, Freq: 1\n",
-      "\t\tPositions: {10}\n",
-      "\t\tFields:\n",
-      "\t\t\tnormal:{10}\n",
+      "\t\tPos: {10}\n",
+      "\t\tWeights: {'normal': {10}}\n",
       "\tDocId: 2, Freq: 1\n",
-      "\t\tPositions: {10}\n",
-      "\t\tFields:\n",
-      "\t\t\tnormal:{10}\n",
+      "\t\tPos: {10}\n",
+      "\t\tWeights: {'normal': {10}}\n",
       "\n",
-      "Token: paragraph, Total Freq: 2\n",
+      "Token: paragraph\n",
       "\tDocId: 1, Freq: 1\n",
-      "\t\tPositions: {11}\n",
-      "\t\tFields:\n",
-      "\t\t\tnormal:{11}\n",
+      "\t\tPos: {11}\n",
+      "\t\tWeights: {'normal': {11}}\n",
       "\tDocId: 2, Freq: 1\n",
-      "\t\tPositions: {11}\n",
-      "\t\tFields:\n",
-      "\t\t\tnormal:{11}\n",
+      "\t\tPos: {11}\n",
+      "\t\tWeights: {'normal': {11}}\n",
       "\n",
-      "Token: pride, Total Freq: 2\n",
+      "Token: pride\n",
       "\tDocId: 1, Freq: 1\n",
-      "\t\tPositions: {12}\n",
-      "\t\tFields:\n",
-      "\t\t\tnormal:{12}\n",
+      "\t\tPos: {12}\n",
+      "\t\tWeights: {'normal': {12}}\n",
       "\tDocId: 2, Freq: 1\n",
-      "\t\tPositions: {12}\n",
-      "\t\tFields:\n",
-      "\t\t\tnormal:{12}\n",
+      "\t\tPos: {12}\n",
+      "\t\tWeights: {'normal': {12}}\n",
       "\n",
-      "Token: cometh, Total Freq: 2\n",
+      "Token: cometh\n",
       "\tDocId: 1, Freq: 1\n",
-      "\t\tPositions: {13}\n",
-      "\t\tFields:\n",
-      "\t\t\tnormal:{13}\n",
+      "\t\tPos: {13}\n",
+      "\t\tWeights: {'normal': {13}}\n",
       "\tDocId: 2, Freq: 1\n",
-      "\t\tPositions: {13}\n",
-      "\t\tFields:\n",
-      "\t\t\tnormal:{13}\n",
+      "\t\tPos: {13}\n",
+      "\t\tWeights: {'normal': {13}}\n",
       "\n",
-      "Token: befor, Total Freq: 2\n",
+      "Token: befor\n",
       "\tDocId: 1, Freq: 1\n",
-      "\t\tPositions: {14}\n",
-      "\t\tFields:\n",
-      "\t\t\tnormal:{14}\n",
+      "\t\tPos: {14}\n",
+      "\t\tWeights: {'normal': {14}}\n",
       "\tDocId: 2, Freq: 1\n",
-      "\t\tPositions: {14}\n",
-      "\t\tFields:\n",
-      "\t\t\tnormal:{14}\n",
+      "\t\tPos: {14}\n",
+      "\t\tWeights: {'normal': {14}}\n",
       "\n",
-      "Token: fall, Total Freq: 2\n",
+      "Token: fall\n",
       "\tDocId: 1, Freq: 1\n",
-      "\t\tPositions: {16}\n",
-      "\t\tFields:\n",
-      "\t\t\tnormal:{16}\n",
+      "\t\tPos: {16}\n",
+      "\t\tWeights: {'normal': {16}}\n",
       "\tDocId: 2, Freq: 1\n",
-      "\t\tPositions: {16}\n",
-      "\t\tFields:\n",
-      "\t\t\tnormal:{16}\n",
+      "\t\tPos: {16}\n",
+      "\t\tWeights: {'normal': {16}}\n",
       "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "invIndex = InvertedIndex() #Create inverted index to hold tokens from parser\n",
-    "\n",
     "#Cleans and parses HTML content into tokens then adds it to Inverted index\n",
     "tokenizeHtml(docId=1, invIndex=invIndex, htmlContent=htmlContent)\n",
-    "#calculate tf*idf for docId#1\n",
     "tokenizeHtml(docId=2, invIndex=invIndex, htmlContent=htmlContent)\n",
     "print(invIndex)"
    ]
