dont overwrite token if token already exists

--- a/ShelveWrite_Demo.ipynb
+++ b/ShelveWrite_Demo.ipynb
@@ -6,51 +6,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from HelperClass import InvertedIndex, Posting, Token, ShelveDB"
+    "from HelperClass import InvertedIndex, Token"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\tDocId: 1, Freq: 2\n",
-       "\t\tPositions: {1, 2}\n",
-       "\t\tFields:None"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "fishP = Posting(1)\n",
-    "fishP.addPosition(1)\n",
-    "fishP.addPosition(2)\n",
+    "fTok = Token('fish')\n",
+    "fTok.addDoc(1)\n",
+    "fTok.addPosition(1,1)\n",
+    "fTok.addWeight(1,'title', 1)\n",
+    "fTok.addWeight(1,'normal', 1)\n",
     "\n",
-    "fishP2 = Posting(2)\n",
-    "fishP2.addPosition(3)\n",
-    "fishP2.addPosition(7)\n",
-    "fishP2.addPosition(10)\n",
-    "\n",
-    "fishP"
+    "fTok2 = Token('fish')\n",
+    "fTok2.addDoc(2)\n",
+    "fTok2.addPosition(2,1)\n",
+    "fTok2.addPosition(2,2)\n",
+    "fTok2.addWeight(2,'title', 1)\n",
+    "fTok2.addWeight(2,'normal', 1)\n",
+    "fTok2.addWeight(2,'normal', 2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Total Tokens: 1\n",
+       "Token: fish\n",
+       "\tDocId: 1, Freq: 1\n",
+       "\t\tPos: {1}\n",
+       "\t\tWeights: {'title': {1}, 'normal': {1}}\n"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "fishTok = Token('fish')\n",
-    "nTok = Token('notFish')\n",
-    "fishTok.addPosting(fishP)\n",
-    "fishTok.addPosting(fishP2)\n",
-    "nTok.addPosting(fishP2)"
+    "invIndex = InvertedIndex()\n",
+    "invIndex.addToken(fTok)\n",
+    "invIndex"
    ]
   },
   {
@@ -61,22 +64,11 @@
     {
      "data": {
       "text/plain": [
-       "Total Tokens: 2\n",
+       "Total Tokens: 1\n",
        "Token: fish\n",
-       "DocId: 1, Pos: \tDocId: 1, Freq: 2\n",
-       "\t\tPositions: {1, 2}\n",
-       "\t\tFields:None\n",
-       "\n",
-       "DocId: 2, Pos: \tDocId: 2, Freq: 3\n",
-       "\t\tPositions: {10, 3, 7}\n",
-       "\t\tFields:None\n",
-       "\n",
-       "\n",
-       "Token: notFish\n",
-       "DocId: 2, Pos: \tDocId: 2, Freq: 3\n",
-       "\t\tPositions: {10, 3, 7}\n",
-       "\t\tFields:None\n",
-       "\n"
+       "\tDocId: 2, Freq: 2\n",
+       "\t\tPos: {1, 2}\n",
+       "\t\tWeights: {'title': {1}, 'normal': {1, 2}}\n"
       ]
      },
      "execution_count": 4,
@@ -85,134 +77,40 @@
     }
    ],
    "source": [
-    "invIndex = InvertedIndex()\n",
-    "invIndex.addToken(fishTok)\n",
-    "invIndex.addToken(nTok)\n",
-    "# invIndex.write()\n",
-    "invIndex"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'title': {2, 3}, 'normal': {4}}\n"
-     ]
-    }
-   ],
-   "source": [
-    "from collections import defaultdict\n",
-    "\n",
-    "_weights = defaultdict(lambda: dict)\n",
-    "\n",
-    "def addWeight(docId, field, pos):\n",
-    "    if docId in _weights:\n",
-    "        if field in _weights[docId]:\n",
-    "            _weights[docId][field].add(pos)\n",
-    "        else:\n",
-    "            _weights[docId][field] = {pos}\n",
-    "    else:\n",
-    "        _weights[docId] = {field:{pos}}\n",
-    "\n",
-    "\n",
-    "addWeight(1,'title', 2)\n",
-    "addWeight(1,'title', 3)\n",
-    "addWeight(1,'normal', 4)\n",
-    "addWeight(2,'normal', 5)\n",
-    "addWeight(2,'title', 1)\n",
-    "\n",
-    "\n",
-    "print(dict(_weights[1]))"
+    "invIndex2 = InvertedIndex()\n",
+    "invIndex2.addToken(fTok2)\n",
+    "invIndex2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import shelve\n",
-    "def writeTerm(tokenObj:Token):\n",
-    "    term = tokenObj.getToken()\n",
-    "    with shelve.open(f'Shelve/Terms', 'c') as shelf:\n",
-    "        shelf[term] = tokenObj.getAllPostings()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{1: {1, 2}, 2: {3, 7, 10}}"
+       "Total Tokens: 1\n",
+       "Token: fish\n",
+       "\tDocId: 1, Freq: 1\n",
+       "\t\tPos: {1}\n",
+       "\t\tWeights: {'title': {1}, 'normal': {1}}\n",
+       "\tDocId: 2, Freq: 2\n",
+       "\t\tPos: {1, 2}\n",
+       "\t\tWeights: {'title': {1}, 'normal': {1, 2}}\n"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "invIndex['fish'].getAllPositions()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{1, 2}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "invIndex['fish'].getAllDocId()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# writeTerm(invIndex['fish'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def readTerm(term:str):\n",
-    "    with shelve.open(f'Shelve/Terms', 'c') as shelf:\n",
-    "        if term in shelf:\n",
-    "            return shelf[term]\n",
-    "        else:\n",
-    "            return 'N/A'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# readTerm('fish')"
+    "fInvIndex = InvertedIndex()\n",
+    "fInvIndex.addToken(fTok)\n",
+    "fInvIndex.addToken(fTok2)\n",
+    "\n",
+    "fInvIndex"
    ]
   }
  ],
