--- a/InvertedIndex_Demo.ipynb
+++ b/InvertedIndex_Demo.ipynb
@@ -22,10 +22,7 @@
        "Token: fish\n",
        "\tDocId: 1, Freq: 1\n",
        "\t\tPos: {1}\n",
-       "\t\tWeights: {'title': {1}, 'normal': {1}}\n",
-       "\tDocId: 2, Freq: 2\n",
-       "\t\tPos: {1, 2}\n",
-       "\t\tWeights: {'title': {1}, 'normal': {1, 2}}"
+       "\t\tWeights: {'title': {1}, 'normal': {1}}"
       ]
      },
      "execution_count": 2,
@@ -39,13 +36,6 @@
     "fTok.addPosition(1,1)\n",
     "fTok.addWeight(1,'title', 1)\n",
     "fTok.addWeight(1,'normal', 1)\n",
-    "\n",
-    "fTok.addDoc(2)\n",
-    "fTok.addPosition(2,1)\n",
-    "fTok.addPosition(2,2)\n",
-    "fTok.addWeight(2,'title', 1)\n",
-    "fTok.addWeight(2,'normal', 1)\n",
-    "fTok.addWeight(2,'normal', 2)\n",
     "fTok"
    ]
   },
@@ -76,9 +66,6 @@
       "\tDocId: 1, Freq: 1\n",
       "\t\tPos: {1}\n",
       "\t\tWeights: {'title': {1}, 'normal': {1}}\n",
-      "\tDocId: 2, Freq: 2\n",
-      "\t\tPos: {1, 2}\n",
-      "\t\tWeights: {'title': {1}, 'normal': {1, 2}}\n",
       "\n",
       "Token: Tropical\n",
       "\tDocId: 1, Freq: 1\n",
@@ -107,6 +94,47 @@
     {
      "data": {
       "text/plain": [
+       "Total Tokens: 2\n",
+       "Token: fish\n",
+       "\tDocId: 1, Freq: 1\n",
+       "\t\tPos: {1}\n",
+       "\t\tWeights: {'title': {1}, 'normal': {1}}\n",
+       "\tDocId: 2, Freq: 2\n",
+       "\t\tPos: {1, 2}\n",
+       "\t\tWeights: {'title': {1}, 'normal': {1, 2}}\n",
+       "\n",
+       "Token: Tropical\n",
+       "\tDocId: 1, Freq: 1\n",
+       "\t\tPos: {10}\n",
+       "\t\tWeights: {'title': {12}, 'normal': {11}}\n"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fTok.addDoc(2)\n",
+    "fTok.addPosition(2,1)\n",
+    "fTok.addPosition(2,2)\n",
+    "fTok.addWeight(2,'title', 1)\n",
+    "fTok.addWeight(2,'normal', 1)\n",
+    "fTok.addWeight(2,'normal', 2)\n",
+    "\n",
+    "invIndex.addToken(fTok)\n",
+    "\n",
+    "invIndex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
        "Token: fish\n",
        "\tDocId: 1, Freq: 1\n",
        "\t\tPos: {1}\n",
@@ -116,7 +144,7 @@
        "\t\tWeights: {'title': {1}, 'normal': {1, 2}}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +206,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32md:\\RJ\\UCI\\Ralph School\\2023 Spring\\CS 121\\Assignments\\A3WebSearch\\InvertedIndex_Demo.ipynb Cell 8\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/RJ/UCI/Ralph%20School/2023%20Spring/CS%20121/Assignments/A3WebSearch/InvertedIndex_Demo.ipynb#X34sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#Access unknown type\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/RJ/UCI/Ralph%20School/2023%20Spring/CS%20121/Assignments/A3WebSearch/InvertedIndex_Demo.ipynb#X34sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m invIndex[\u001b[39m'\u001b[39;49m\u001b[39mfish\u001b[39;49m\u001b[39m'\u001b[39;49m][\u001b[39m'\u001b[39;49m\u001b[39mIDK\u001b[39;49m\u001b[39m'\u001b[39;49m]\n",
+      "\u001b[1;32md:\\RJ\\UCI\\Ralph School\\2023 Spring\\CS 121\\Assignments\\A3WebSearch\\InvertedIndex_Demo.ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/RJ/UCI/Ralph%20School/2023%20Spring/CS%20121/Assignments/A3WebSearch/InvertedIndex_Demo.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#Access unknown type\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/RJ/UCI/Ralph%20School/2023%20Spring/CS%20121/Assignments/A3WebSearch/InvertedIndex_Demo.ipynb#X10sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m invIndex[\u001b[39m'\u001b[39;49m\u001b[39mfish\u001b[39;49m\u001b[39m'\u001b[39;49m][\u001b[39m'\u001b[39;49m\u001b[39mIDK\u001b[39;49m\u001b[39m'\u001b[39;49m]\n",
       "File \u001b[1;32md:\\RJ\\UCI\\Ralph School\\2023 Spring\\CS 121\\Assignments\\A3WebSearch\\HelperClass.py:44\u001b[0m, in \u001b[0;36mToken.__getitem__\u001b[1;34m(self, postType)\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__getitem__\u001b[39m(\u001b[39mself\u001b[39m, postType:\u001b[39mstr\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mdict\u001b[39m:\n\u001b[1;32m---> 44\u001b[0m     \u001b[39massert\u001b[39;00m postType \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mpos\u001b[39m\u001b[39m'\u001b[39m \u001b[39mor\u001b[39;00m postType \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mfield\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mToken info \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mpostType\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m does NOT exist!\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     46\u001b[0m     \u001b[39mif\u001b[39;00m postType \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mpos\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m     47\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_positions\n",
       "\u001b[1;31mAssertionError\u001b[0m: Token info 'IDK' does NOT exist!"
      ]
