update invIndex demo

--- a/InvertedIndex_Demo.ipynb
+++ b/InvertedIndex_Demo.ipynb
@@ -115,6 +115,7 @@
     }
    ],
    "source": [
+    "fTok = Token('fish')\n",
     "fTok.addDoc(2)\n",
     "fTok.addPosition(2,1)\n",
     "fTok.addPosition(2,2)\n",
