add readShelve func

--- a/ShelveWrite_Demo.ipynb
+++ b/ShelveWrite_Demo.ipynb
@@ -53,6 +53,7 @@
    "source": [
     "invIndex = InvertedIndex()\n",
     "invIndex.addToken(fTok)\n",
+    "invIndex.write()\n",
     "invIndex"
    ]
   },
@@ -79,6 +80,7 @@
    "source": [
     "invIndex2 = InvertedIndex()\n",
     "invIndex2.addToken(fTok2)\n",
+    "invIndex2.write()\n",
     "invIndex2"
    ]
   },
@@ -111,6 +113,51 @@
     "fInvIndex.addToken(fTok2)\n",
     "\n",
     "fInvIndex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Tokens: 1\n",
+      "Token: fish\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Total Tokens: 1\n",
+       "Token: fish\n",
+       "\tDocId: 1, Freq: 1\n",
+       "\t\tPos: {1}\n",
+       "\t\tWeights: {'title': {1}, 'normal': {1}}\n",
+       "\tDocId: 2, Freq: 2\n",
+       "\t\tPos: {1, 2}\n",
+       "\t\tWeights: {'title': {1}, 'normal': {1, 2}}\n"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newIndex = InvertedIndex()\n",
+    "newTok = Token('fish')\n",
+    "newIndex.addToken(newTok)\n",
+    "print(newIndex)\n",
+    "\n",
+    "newTok.readShelve('Shelve', 'fish')\n",
+    "newIndex.addToken(newTok)\n",
+    "\n",
+    "newIndex"
    ]
   }
  ],
