create dataframe demo

--- a/ShelveWrite_Demo.ipynb
+++ b/ShelveWrite_Demo.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from HelperClass import InvertedIndex, Token"
+    "from HelperClass import InvertedIndex, Token\n",
+    "import pandas as pd\n",
+    "import pyarrow.feather as feather"
    ]
   },
   {
@@ -53,8 +55,32 @@
    "source": [
     "invIndex = InvertedIndex()\n",
     "invIndex.addToken(fTok)\n",
-    "invIndex.write()\n",
+    "# invIndex.write()\n",
     "invIndex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     1    2\n",
+      "0  1.0  1.0\n",
+      "1  0.0  2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = invIndex['fish'].getAllPos()\n",
+    "\n",
+    "df = pd.DataFrame.from_dict(data, orient='index')\n",
+    "df.fillna(0, inplace=True)\n",
+    "df = df.transpose()\n",
+    "print(df)"
    ]
   },
   {
@@ -80,7 +106,7 @@
    "source": [
     "invIndex2 = InvertedIndex()\n",
     "invIndex2.addToken(fTok2)\n",
-    "invIndex2.write()\n",
+    "# invIndex2.write()\n",
     "invIndex2"
    ]
   },
@@ -119,45 +145,16 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total Tokens: 1\n",
-      "Token: fish\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Total Tokens: 1\n",
-       "Token: fish\n",
-       "\tDocId: 1, Freq: 1\n",
-       "\t\tPos: {1}\n",
-       "\t\tWeights: {'title': {1}, 'normal': {1}}\n",
-       "\tDocId: 2, Freq: 2\n",
-       "\t\tPos: {1, 2}\n",
-       "\t\tWeights: {'title': {1}, 'normal': {1, 2}}\n"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "newIndex = InvertedIndex()\n",
-    "newTok = Token('fish')\n",
-    "newIndex.addToken(newTok)\n",
-    "print(newIndex)\n",
+    "# newIndex = InvertedIndex()\n",
+    "# newTok = Token('fish')\n",
+    "# newIndex.addToken(newTok)\n",
+    "# print(newIndex)\n",
     "\n",
-    "newTok.readShelve('Shelve', 'fish')\n",
-    "newIndex.addToken(newTok)\n",
+    "# newIndex.addToken(newTok)\n",
     "\n",
-    "newIndex"
+    "# newIndex"
    ]
   }
  ],
